feat: 管理员服务获取权限列表时，若用户为管理员，现在会添加管理员身份